kubernetes/apps/base/media/arr/sonarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.theblacklodge.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
